# edge-face-recognize

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
resource/: config.json
scripts/: android_lldb_start.sh  build_cv.sh  build_qt.sh
source/: CMakeLists.txt  config.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  status_code.h
source/lite/ncnn/cv/: ncnn_mobile_facenet.h
source/request/: request.cpp  request.h
